BE: Deleted schemas, changed makefile and started setuping env, app and database.

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,5 +1,11 @@
 rundb:
-	docker run -e POSTGRES_PASSWORD="123321" -p 5436:5432 --rm -d postgres
+	docker run -d --name mymongodb \
+  -p 5436:27017 \
+  -e MONGO_INITDB_ROOT_USERNAME=admin \
+  -e MONGO_INITDB_ROOT_PASSWORD=123321 \
+  -d --rm\
+  -v db-team-work-space\
+  mongo
 migrate-up:
 	pass
 migrate-down:
